File scoped namespaces
Cleaned up un-used code as identified from code coverage report.

--- a/src/System.CommandLine.Extended.Tests/System.CommandLine.Extended.Tests.csproj
+++ b/src/System.CommandLine.Extended.Tests/System.CommandLine.Extended.Tests.csproj
@@ -21,6 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\System.CommandLine.Extended\System.CommandLine.Extended.csproj" />
     <ProjectReference Include="..\System.CommandLine\System.CommandLine.csproj" />
   </ItemGroup>
 
@@ -36,8 +37,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="..\System.CommandLine\Properties\Resources.resx"
-                      LogicalName="System.CommandLine.Properties.Resources.resources" />
+    <EmbeddedResource Include="..\System.CommandLine\Properties\Resources.resx" LogicalName="System.CommandLine.Properties.Resources.resources" />
   </ItemGroup>
 
 </Project>
