--- a/src/System.CommandLine/System.CommandLine.csproj
+++ b/src/System.CommandLine/System.CommandLine.csproj
@@ -53,7 +53,7 @@
     <Compile Include="Parsing\CommandResult.cs" />
     <Compile Include="Parsing\Location.cs" />
     <Compile Include="Parsing\OptionResult.cs" />
-    <Compile Include="Parsing\ParseError.cs" />
+    <Compile Include="Parsing\CliDiagnostic.cs" />
     <Compile Include="Parsing\ParseOperation.cs" />
     <Compile Include="Parsing\StringExtensions.cs" />
     <Compile Include="Parsing\SymbolResult.cs" />
@@ -69,6 +69,7 @@
 
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
     <PackageReference Include="System.Memory" />
+    <PackageReference Include="System.Collections.Immutable" />
   </ItemGroup>
 
   <ItemGroup>
